[package]
name = "macro_expand"
version = "0.1.1"
edition = "2024"
license = "MIT"
authors = ["Shigma <shigma10826@gmail.com>"]
description = "Expand procedural macros in-place."
repository = "https://github.com/shigma/macro_expand"
documentation = "https://docs.rs/macro_expand"

[dependencies]
itertools = "0.14.0"
proc-macro2 = "1.0.103"
quote = "1.0.41"
syn = { version = "2.0.108", features = ["full", "visit-mut"] }
